--- a/eDensity3d/dreamplace/ops/global_swap/CMakeLists.txt
+++ b/eDensity3d/dreamplace/ops/global_swap/CMakeLists.txt
@@ -1,15 +1,59 @@
-cmake_minimum_required(VERSION 3.5)
-project(global_swap)
+cmake_minimum_required(VERSION 3.12)
 
-# Check for CUDA support
-if(USE_CUDA)
-    enable_language(CUDA)
-    set(CUDA_SEPARABLE_COMPILATION ON)
+# 收集global_swap操作源文件
+set(GLOBAL_SWAP_SOURCES
+    src\global_swap.cpp
+    src\global_swap_concurrent.cpp
+    src\global_swap_cuda.cpp
+)
+
+if(CUDA_FOUND)
+    list(APPEND GLOBAL_SWAP_SOURCES
+        src\global_swap_cuda_kernel.cu
+    )
 endif()
 
-# Add subdirectory if src exists
-if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/src)
-    add_subdirectory(src)
+# 创建Python绑定
+pybind11_add_module(global_swap_cpp SHARED ${GLOBAL_SWAP_SOURCES})
+
+# 链接库
+target_link_libraries(global_swap_cpp PRIVATE 
+    torch
+    ${Boost_LIBRARIES}
+)
+
+# 设置编译属性
+set_target_properties(global_swap_cpp PROPERTIES
+    CXX_STANDARD 14
+    POSITION_INDEPENDENT_CODE ON
+)
+
+# 设置CUDA属性
+if(CUDA_FOUND)
+    set_target_properties(global_swap_cpp PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON
+    )
+    target_include_directories(global_swap_cpp PRIVATE ${CUDA_INCLUDE_DIRS})
 endif()
 
-# Python bindings will be handled by the parent CMakeLists.txt
+# 包含目录
+target_include_directories(global_swap_cpp PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/utility/src
+    ${TORCH_INCLUDE_DIRS}
+)
+
+# 如果有CUDA，创建CUDA版本
+if(CUDA_FOUND)
+    pybind11_add_module(global_swap_cuda SHARED
+    )
+    target_link_libraries(global_swap_cuda PRIVATE torch ${Boost_LIBRARIES})
+    set_target_properties(global_swap_cuda PROPERTIES CXX_STANDARD 14 CUDA_SEPARABLE_COMPILATION ON)
+    target_include_directories(global_swap_cuda PRIVATE ${CUDA_INCLUDE_DIRS} ${TORCH_INCLUDE_DIRS})
+endif()
+
+# 安装模块
+install(TARGETS global_swap_cpp DESTINATION dreamplace/ops/global_swap)
+if(CUDA_FOUND)
+    install(TARGETS global_swap_cuda DESTINATION dreamplace/ops/global_swap)
+endif()
